// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rendering with seasons & viewings should render the list and viewers 1`] = `
<Styled(List)>
  <Styled(ListItem)
    onPress={[Function]}
  >
    <GridNB>
      <ColumnNB
        size={38}
      >
        <Styled(ViewNB)
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
            }
          }
        >
          <Styled(Text)
            style={
              Object {
                "flexGrow": 1,
                "textAlign": "right",
              }
            }
          >
            Season 3
          </Styled(Text)>
          <Styled(Text)
            note={true}
            style={
              Object {
                "flexBasis": "100%",
                "textAlign": "right",
              }
            }
          />
        </Styled(ViewNB)>
      </ColumnNB>
      <ColumnNB
        size={62}
        style={
          Object {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-start",
            "paddingHorizontal": 20,
          }
        }
      />
    </GridNB>
  </Styled(ListItem)>
  <Styled(ListItem)
    onPress={[Function]}
  >
    <GridNB>
      <ColumnNB
        size={38}
      >
        <Styled(ViewNB)
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
            }
          }
        >
          <Styled(Text)
            style={
              Object {
                "flexGrow": 1,
                "textAlign": "right",
              }
            }
          >
            Season 2
          </Styled(Text)>
          <Styled(Text)
            note={true}
            style={
              Object {
                "flexBasis": "100%",
                "textAlign": "right",
              }
            }
          >
            13 ep.
             in 2015
          </Styled(Text)>
        </Styled(ViewNB)>
      </ColumnNB>
      <ColumnNB
        size={62}
        style={
          Object {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-start",
            "paddingHorizontal": 20,
          }
        }
      >
        <Styled(Button)
          onLongPress={[Function]}
          onPress={[Function]}
          small={true}
          style={
            Object {
              "backgroundColor": "pink",
              "marginHorizontal": 2,
              "marginVertical": 2,
            }
          }
        >
          <Styled(Text)
            style={
              Object {
                "color": "#ffffff",
              }
            }
          >
            Friend 1
          </Styled(Text)>
        </Styled(Button)>
        <Styled(Button)
          onLongPress={[Function]}
          onPress={[Function]}
          small={true}
          style={
            Object {
              "backgroundColor": "blue",
              "marginHorizontal": 2,
              "marginVertical": 2,
            }
          }
        >
          <Styled(Text)
            style={
              Object {
                "color": "#ffffff",
              }
            }
          >
            Friend 2
          </Styled(Text)>
        </Styled(Button)>
      </ColumnNB>
    </GridNB>
  </Styled(ListItem)>
  <Styled(ListItem)
    onPress={[Function]}
  >
    <GridNB>
      <ColumnNB
        size={38}
      >
        <Styled(ViewNB)
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
            }
          }
        >
          <Styled(Text)
            style={
              Object {
                "flexGrow": 1,
                "textAlign": "right",
              }
            }
          >
            Season 1
          </Styled(Text)>
          <Styled(Text)
            note={true}
            style={
              Object {
                "flexBasis": "100%",
                "textAlign": "right",
              }
            }
          >
            13 ep.
             in 2014
          </Styled(Text)>
        </Styled(ViewNB)>
      </ColumnNB>
      <ColumnNB
        size={62}
        style={
          Object {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-start",
            "paddingHorizontal": 20,
          }
        }
      />
    </GridNB>
  </Styled(ListItem)>
</Styled(List)>
`;

exports[`Rendering with seasons but no viewings should render the list with the help message to add viewers 1`] = `
<Styled(List)>
  <Styled(ListItem)
    onPress={[Function]}
  >
    <GridNB>
      <ColumnNB
        size={38}
      >
        <Styled(ViewNB)
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
            }
          }
        >
          <Styled(Text)
            style={
              Object {
                "flexGrow": 1,
                "textAlign": "right",
              }
            }
          >
            Season 3
          </Styled(Text)>
          <Styled(Text)
            note={true}
            style={
              Object {
                "flexBasis": "100%",
                "textAlign": "right",
              }
            }
          />
        </Styled(ViewNB)>
      </ColumnNB>
      <ColumnNB
        size={62}
        style={
          Object {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-start",
            "paddingHorizontal": 20,
          }
        }
      >
        <pure(Helptext)>
          Click on a season when someone viewed it
        </pure(Helptext)>
      </ColumnNB>
    </GridNB>
  </Styled(ListItem)>
  <Styled(ListItem)
    onPress={[Function]}
  >
    <GridNB>
      <ColumnNB
        size={38}
      >
        <Styled(ViewNB)
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
            }
          }
        >
          <Styled(Text)
            style={
              Object {
                "flexGrow": 1,
                "textAlign": "right",
              }
            }
          >
            Season 2
          </Styled(Text)>
          <Styled(Text)
            note={true}
            style={
              Object {
                "flexBasis": "100%",
                "textAlign": "right",
              }
            }
          >
            13 ep.
             in 2015
          </Styled(Text)>
        </Styled(ViewNB)>
      </ColumnNB>
      <ColumnNB
        size={62}
        style={
          Object {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-start",
            "paddingHorizontal": 20,
          }
        }
      />
    </GridNB>
  </Styled(ListItem)>
  <Styled(ListItem)
    onPress={[Function]}
  >
    <GridNB>
      <ColumnNB
        size={38}
      >
        <Styled(ViewNB)
          style={
            Object {
              "alignItems": "flex-start",
              "flexDirection": "row",
              "flexWrap": "wrap",
              "justifyContent": "space-between",
            }
          }
        >
          <Styled(Text)
            style={
              Object {
                "flexGrow": 1,
                "textAlign": "right",
              }
            }
          >
            Season 1
          </Styled(Text)>
          <Styled(Text)
            note={true}
            style={
              Object {
                "flexBasis": "100%",
                "textAlign": "right",
              }
            }
          >
            13 ep.
             in 2014
          </Styled(Text)>
        </Styled(ViewNB)>
      </ColumnNB>
      <ColumnNB
        size={62}
        style={
          Object {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "flexWrap": "wrap",
            "justifyContent": "flex-start",
            "paddingHorizontal": 20,
          }
        }
      />
    </GridNB>
  </Styled(ListItem)>
</Styled(List)>
`;
